# rtype

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile  README.md  compose.yaml  format-diff.sh  index.html  meow.py  tt.txt
client/: CMakeLists.txt  GameInterface.hpp  GraphicalLibInterface.hpp  main.cpp
client/api/: GUI.hpp  IGameState.hpp  IGraphicalLibrary.hpp  ILogic.hpp
client/commands/: Command.hpp  Stop.hpp
client/components/: Color.hpp  HorizontalTiling.hpp  Player.hpp  PlayerId.hpp  Square.hpp  StraightMoving.hpp  Texture.hpp
client/event/: Event.hpp  EventId.hpp  EventState.hpp
client/game/: Game.cpp  Game.hpp
client/graphical_library/: Color.hpp  GraphicalLibrary.hpp  Sound.hpp  Vector.hpp
client/manager/: ClientManager.cpp  ClientManager.hpp  CommandManager.cpp  CommandManager.hpp  EventManager.cpp  EventManager.hpp  NetworkManager.cpp  NetworkManager.hpp  SoundManager.cpp  SoundManager.hpp  TextureManager.cpp  TextureManager.hpp
client/network/executor/: AuthentifiedPacketExecutor.hpp  DespawnBulletExecutor.hpp  DespawnPlayerExecutor.hpp  DespawnPlayerSoundExecutor.hpp  DestroyEntityExecutor.hpp  EnemyDiedExecutor.hpp  GameOverExecutor.hpp  HealthUpdateExecutor.hpp  HitboxSizeUpdateExecutor.hpp  JoinedLobbyExecutor.hpp  LaserActivateUpdateExecutor.hpp  LinkPlayersExecutor.hpp  LobbyConfigExecutor.hpp  LoginExecutor.hpp  NewBulletExecutor.hpp  NewEnemyExecutor.hpp  NewPlayerExecutor.hpp  PlayerHitExecutor.hpp  PlayerIdExecutor.hpp  PositionUpdateExecutor.hpp  ScorePacketExecutor.hpp  SetAdminExecutor.hpp  StartGameExecutor.hpp  TextChatStringExecutorGame.hpp  TextChatStringExecutorLobby.hpp  UpdateTimeExecutor.hpp  placeholderExecutor.hpp
client/raylib/: Raylib.cpp  Raylib.hpp
client/raylib/sound/: Sound.hpp
client/raylib/systems/: RenderSquare.cpp  Systems.hpp
client/src/: main.cpp
client/state_machine/: IState.hpp  State.cpp  State.hpp  StateMachine.cpp  StateMachine.hpp
client/states/: State.hpp
client/states/connecting/: ConnectingState.cpp  ConnectingState.hpp  gui.cpp  gui.hpp  logic.cpp  logic.hpp
client/states/game/: InGameState.cpp  InGameState.hpp  gui.cpp  gui.hpp  logic.cpp  logic.hpp
client/states/lobby/: LobbyState.cpp  LobbyState.hpp  gui.cpp  gui.hpp  logic.cpp  logic.hpp
client/window/: RenderWindow.hpp
graphical_library/: CMakeLists.txt
graphical_library/Test/: TestButton.cpp  TestButton.hpp  TestCheckBox.cpp  TestCheckBox.hpp  TestGui.cpp  TestGui.hpp  TestInputBox.cpp  TestInputBox.hpp  TestTextBox.cpp  TestTextBox.hpp
graphical_library/api/: AnimatedSprite.hpp  Box.hpp  Button.hpp  Check.hpp  Checkbox.hpp  GraphicalLibrary.hpp  Gui.cpp  Gui.hpp  GuiScene.hpp  InputBox.hpp  Key.hpp  KeybindSelect.hpp  MyButton.hpp  MyCheck.hpp  MyInputBox.hpp  MyTextBox.hpp  Render.hpp  Renderer.hpp  Sound.hpp  Text.hpp  TextBox.hpp  Texture.hpp  Vector.hpp
graphical_library/api/shapes/: Rectangle.hpp
graphical_library/checkbox/: Check.hpp
graphical_library/gui/: Gui.cpp  Gui.hpp
graphical_library/raylib/: GuiScene.cpp  GuiScene.hpp  InitGraphicalLibrary.hpp  Raylib.cpp  Raylib.hpp
graphical_library/raylib/box/: Box.cpp  Box.hpp
graphical_library/raylib/buttons/: Button.cpp  Button.hpp  MyButton.cpp  MyButton.hpp
graphical_library/raylib/checkbox/: Check.cpp  Check.hpp  Checkbox.cpp  Checkbox.hpp
graphical_library/raylib/inputbox/: InputBox.cpp  InputBox.hpp  MyInputBox.cpp  MyInputBox.hpp
graphical_library/raylib/keybindSelect/: KeybindSelect.cpp  KeybindSelect.hpp
graphical_library/raylib/shader/: IShader.hpp  Shader.cpp  Shader.hpp
graphical_library/raylib/sound/: Sound.cpp  Sound.hpp
graphical_library/raylib/text/: Text.cpp  Text.hpp
graphical_library/raylib/textbox/: MyTextBox.cpp  MyTextBox.hpp  TextBox.cpp  TextBox.hpp
graphical_library/raylib/texture/: Texture.cpp  Texture.hpp
graphical_library/renderer/: Renderer.cpp  Renderer.hpp
network/: CMakeLists.txt  README.md
network/client/: Client.cpp  Client.hpp  IPollable.hpp  PollManager.cpp  PollManager.hpp  Pollable.hpp
network/logger/: Logger.hpp
network/packets/: Packet.hpp  PacketCompressor.hpp  PacketLogger.hpp  PacketManager.cpp  PacketManager.hpp  PacketReader.cpp  PacketReader.hpp  PacketSender.cpp  PacketSender.hpp
network/packets/impl/: AuthentifiedPacket.hpp  CAuthentificationPacket.hpp  ClientInputsPacket.hpp  CreatePrivateLobbyPacket.hpp  DespawnBulletPacket.hpp  DespawnPlayerPacket.hpp  DestroyEntityPacket.hpp  EnemyDiedPacket.hpp  GameOverPacket.hpp  GameStartPacket.hpp  GameStartPacketRequest.hpp  GhostPlayerPositionPacket.hpp  GhostScoreUpdatePacket.hpp  HealthUpdatePacket.hpp  HitboxSizeUpdatePacket.hpp  JoinLobbyWithCodePacket.hpp  JoinOrCreatePublicLobby.hpp  JoinedLobbyPacket.hpp  LaserActiveUpdatePacket.hpp  (+29 more)
network/poll/: IPollable.hpp  PollManager.cpp  PollManager.hpp  Pollable.hpp  WakeUpPollable.cpp  WakeUpPollable.hpp
network/server/: Server.cpp  Server.hpp  ServerClient.cpp  ServerClient.hpp
rcon/: CMakeLists.txt  Logger.hpp  RCON.cpp
rcon/commands/: CommandManager.hpp  ICommand.hpp
server/: CMakeLists.txt  R-TypeServer.cpp  R-TypeServer.hpp  RType.cpp  RType.hpp  RTypeServer.cpp  RTypeServer.hpp  Server.cpp  config.cfg  main.cpp
server/components/: Acceleration.hpp  BossTag.hpp  Collision.hpp  Control.hpp  EntityType.hpp  Laser.hpp  Motion.hpp  Position.hpp  Velocity.hpp
server/database/: AccountDatabase.cpp  AccountDatabase.hpp
server/error/: ArgsError.hpp
server/executor/: ClientInputsExecutor.cpp  ClientInputsExecutor.hpp  GameExecutor.cpp  GameExecutor.hpp
server/factories/: EntityFactory.cpp  EntityFactory.hpp
server/game/: ClientInputsExecutor.cpp  Game.cpp  Game.hpp  GameBoss.cpp  GameBoss.hpp  GameExecutor.cpp  GameExecutor.hpp
server/lobby/: Lobby.cpp  Lobby.hpp  LobbyManager.cpp  LobbyManager.hpp
server/packet_queue/: PacketQueue.cpp  PacketQueue.hpp
server/player/: Player.cpp  Player.hpp
server/systems/: GameSystems.cpp  GameSystems.hpp
server/thread/: ThreadPool.cpp  ThreadPool.hpp
server/utils/: RandomUtils.hpp
(+355 files in other folders)
